[package]
name = "windows-opacity-editor"
version = "0.1.0"
authors = ["Rex <elsecaller@8176135.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
windows = { version = "*", features = ["alloc", "Win32_UI_WindowsAndMessaging", "Win32_UI_Accessibility", "Win32_Foundation"] }
#inputbot = "*"
ctrlc = "*"
trayicon = "*"